# crypto_news_aggregator

./: .env  .env.example (rename to .env)  .gitignore  Cargo.toml  README.md  package-lock.json
cryptonews/: package-lock.json  package.json
cryptonews/src/: App.js
cryptonews/src/components/: News.js
src/: api.rs  cache.rs  handler.rs  main.rs  models.rs
src/api/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
src/service/: mod.rs
static/: index.html  style.css
