[package]
name = "crypto_news_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"  # optional for .env file handling
log = "0.4"      # optional for logging
env_logger = "0.9"
